# MKL-DNN_Eigen_Boost_OpenMPI-NonBlocking_GoogleTests_Examples

./: .gitattributes  .gitignore  .~lock.15-mpi-adv.ppt#  CMakeLists.txt  README.md  run
doc/: 15-mpi-adv.ppt  poc.md
extern_libs/Boost/lib/: libboost_contract.so.1.69.0  libboost_date_time.so.1.69.0  libboost_filesystem.so.1.69.0  libboost_graph.so.1.69.0  libboost_graph_parallel.so.1.69.0  libboost_iostreams.so.1.69.0  libboost_log_setup.so.1.69.0  libboost_math_c99l.so.1.69.0  libboost_math_tr1f.so.1.69.0  libboost_mpi.so.1.69.0  libboost_mpi_python27.so.1.69.0  libboost_prg_exec_monitor.so.1.69.0  libboost_program_options.so.1.69.0  libboost_python27.so.1.69.0  libboost_random.so.1.69.0  libboost_regex.so.1.69.0  libboost_stacktrace_addr2line.so.1.69.0  libboost_stacktrace_noop.so.1.69.0  libboost_system.so.1.69.0  libboost_thread.so.1.69.0  libboost_type_erasure.so.1.69.0  libboost_wave.so.1.69.0  libboost_wserialization.so.1.69.0
extern_libs/OpenMPI/lib/: libmca_common_verbs.so.40  libmpi_mpifh.so.40  libmpi_usempi_ignore_tkr.so.40  libompitrace.so.40.20.0
extern_libs/Python27/lib/: libedit.so.0  libformw.so.6  libgcc_s.so.1  libgomp.so.1.0.0  libz.so.1  (+8 more)
modules_cmake/: Boost.cmake  MKLDNN.cmake  OpenMPI.cmake
tmp/ompi_old_project/: ACalc.cpp  main.mpi.cpp  main.mpi.h
tmp/tmp_old_ompi_project/: CMakeLists.txt
tmp/tmp_old_project/mpi/ompi_000/: ACalc.cpp  CMakeLists.txt  MpiMaster.h  MpiSlave.cpp  OpenMPI_Example.sh  main.cpp
tmp/tmp_old_project/mpi/ompi_000/CppUtils/Containers/: std_vector_2d.h
tmp/tmp_old_project/mpi/ompi_000/CppUtils/Math/: FFT.cpp
(+23 files in other folders)
